--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Simple Online tool to convert SVG to JSX"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +18,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SVG to JSX Online Tool</title>
+    <!-- Primary Meta Tags -->
+    <title>SVG to JSX Online Converter for Free</title>
+    <meta name="title" content="SVG to JSX Online Converter for Free">
+    <meta name="description" content="SVG to JSX conversion made easier, online tool to convert SVG to valid JSX for Free.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="SVG to JSX Online Converter for Free">
+    <meta property="og:description" content="SVG to JSX conversion made easier, online tool to convert SVG to valid JSX for Free.">
+    <meta property="og:image" content="https://s3.ap-south-1.amazonaws.com/static-assets.vishnubaliga/social-media/svgtojsx/svg2jsx-screenshot.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="SVG to JSX Online Converter for Free">
+    <meta property="twitter:description" content="SVG to JSX conversion made easier, online tool to convert SVG to valid JSX for Free.">
+    <meta property="twitter:image" content="https://s3.ap-south-1.amazonaws.com/static-assets.vishnubaliga/social-media/svgtojsx/svg2jsx-screenshot.png">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148497006-1"></script>
